mailinglist/output_launchpad/1878628
linux-user/mmap build failure using Clang 10

When building with Clang 10 on Fedora 32, we get:

    CC      linux-user/mmap.o
  linux-user/mmap.c:720:49: error: result of comparison 'unsigned long' > 18446744073709551615 is always false [-Werror,-Wtautological-type-limit-compare]
          if ((unsigned long)host_addr + new_size > (abi_ulong)-1) {
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~

Suggested fix: Use -Wno-tautological-type-limit-compare in configure:

https://<email address hidden>/msg699808.html


Patch posted:
https://lists.gnu.org/archive/html/qemu-devel/2020-06/msg00856.html

Merged as commit aabab96797a7d61989c25a7ca2b094591bbc74f9.

